# aws-botocove-cli

./: generic_cove.py  pyproject.toml
