[tool.poetry]
name = "aws-botocove-cli"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
botocove = "^1.3.0"
awscli = "^1.20.40"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
